A long commit to organize and reorganize stuff after a while

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,21 @@
+bin_local_settings.py
 local_settings.py
-*.html
-*/*.html
-*.log
-*/*.log
-*.mwb
-nonsourcecode/
-*.pdf
-*/*.pdf
+*/local_settings.py
+.directory
 .project
-*.pyc
-*/*.pyc
 .pydevproject
 .settings
-*.sqlite
-*/*.sqlite
+.idea/
+nongitable_content/
+tests/nongitable_tests/
 *~
 */*~
+*.bak
+*/*.bak
+*.bin
+*/*.bin
+*.pyc
+*/*.pyc
+*.sqlite
+*/*.sqlite
+*/*.sqldump
