Created commands/show/list_ms_history.py et al;

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 dados/
 venv/
+.idea/
+__pycache__/
+*/*__pycache__/*
 */local_settings.py
 local_settings.py
-.idea/
 */*.bak
+*.pyc
 */*.pyc
-*/*.sqlite
